Fixed bug that created big gaps at the end of the menu.

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
 			width: 100%;
 			height: 100%;
 			text-align:center;
+			z-index: -1;
 		}
 		
 		#canvasHolder canvas {	
@@ -97,11 +98,11 @@
 		
         p.description {
 			padding-top:15px;
-            width: 420px;
+            width: 400px;
             margin: 10px auto 30px auto;
             color: black;
             font-size: 70%;
-            text-align: justify;
+            text-align: center;
         }
 
 		p a{
